// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationService should create a navigation 1`] = `
[
  {
    "data": {
      "key": "testKey",
      "links": {
        "createMany": {
          "data": [],
        },
      },
      "name": "testName",
    },
    "include": {
      "links": true,
    },
  },
]
`;

exports[`NavigationService should delete a navigation by id 1`] = `
[
  {
    "include": {
      "links": true,
    },
    "where": {
      "id": "123",
    },
  },
]
`;

exports[`NavigationService should get a navigation by id 1`] = `
[
  {
    "include": {
      "links": true,
    },
    "where": {
      "id": "123",
    },
  },
]
`;

exports[`NavigationService should get a navigation by key 1`] = `
[
  {
    "include": {
      "links": true,
    },
    "where": {
      "key": "key123",
    },
  },
]
`;

exports[`NavigationService should get all navigations 1`] = `
[
  {
    "include": {
      "links": true,
    },
    "orderBy": {
      "createdAt": "desc",
    },
  },
]
`;

exports[`NavigationService should update a navigation 1`] = `
[
  {
    "data": {
      "key": "testKey",
      "links": {
        "createMany": {
          "data": [],
        },
      },
      "name": "testName",
    },
    "include": {
      "links": true,
    },
    "where": {
      "id": "123",
    },
  },
]
`;
